pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-ssl-passthrough-and-tls-section.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-ssl-passthrough-and-tls-section
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - passthrough-tls.whoami.localhost
      secretName: whoami-tls
  rules:
    - host: passthrough-tls.whoami.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-tls
                port:
                  number: 443
